--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,11 @@ body {
   margin: 0; 
   font-family: Roboto, sans-serif; 
   
+  background-color: white;
+  
 }
 .container {
     margin: 20px;
     display:flex;
+    color:black;
 }
