--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,12 +36,12 @@
   <mat-card-header>
     <div mat-card-avatar></div>
     <mat-card-title>
-      <h3>{{leader.name | uppercase}}</h3>
+      <h3>{{leader.name | uppercase}} {{leader.abbr}}</h3>
     </mat-card-title>
   </mat-card-header>
   <img mat-card-image src={{leader.image}} alt={{leader.name}}>
   <mat-card-content>
-    <h4>{{leader.designation}}</h4>
+    <p>{{leader.designation}}</p>
     <p>{{leader.description}}
     </p>
   </mat-card-content>
