--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -53,7 +53,7 @@
     </mat-card>
   </div>
 
- <div fxFlex class="my">
+ <div fxFlex class="my" >
     <h2>Corporate Leadership</h2>
     <mat-list *ngIf="leaders">
       <mat-list-item *ngFor="let leader of leaders">
@@ -63,5 +63,9 @@
         <p matLine>{{leader.description}}</p>
       </mat-list-item>
     </mat-list>
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
   </div>
+  
 </div>
