--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
+  <div fxFlex="40" >
     <mat-card *ngIf="dish">
       <mat-card-header>
         <mat-card-title>
@@ -26,7 +26,8 @@
     </mat-card>
 </div>
 
- <div fxFlex="40">
+
+ <div fxFlex="40" >
      <mat-card *ngIf="dish">
       <mat-card-header>
         <mat-card-title>
@@ -42,6 +43,9 @@
         </mat-list-item>
       </mat-list>
     </mat-card>
+</div>
+<div fxflex [hidden]="dish">
+  <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
 </div>
 
 </div>
